# django-sass-processor

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  LICENSE-MIT  MANIFEST.in  README.md  manage.py  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  tests.yml
sass_processor/: __init__.py  apps.py  finders.py  postcss.js  processor.py  sass_preprocessor.py  storage.py  types.py  utils.py  version.py
sass_processor/jinja2/: ext.py
sass_processor/management/commands/: compilescss.py
sass_processor/templatetags/: sass_tags.py
sekizai_processors/: sass_preprocessor.py  storage.py
sekizai_processors/management/commands/: compilescss.py
sekizai_processors/templatetags/: sass_tags.py  sekizai_processors.py
tests/: __init__.py  jinja2.py  requirements.txt  settings.py  test_sass_processor.py
tests/jinja2/tests/: jinja2.html  jinja2_variable.html
tests/static/tests/css/: _redbox.scss  bluebox.scss  main.scss
tests/templates/tests/: django.html  main.html
