[metadata]
name = django-sass-processor
version = attr: sass_processor.__version__
description = SASS processor to compile SCSS files into *.css, while rendering, or offline.
long_description = file: README.md
long_description_content_type = text/markdown
author = Jacob Rief
author_email = jacob.rief@gmail.com
url = https://github.com/jrief/django-sass-processor
license = MIT
license_file = LICENSE-MIT
keywords = django, sass
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0

[options]
packages = find:
zip_safe = False

[options.packages.find]
exclude = tests

[options.extras_require]
management-command = django-compressor>=2.4
